<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_performance">

    <fragment
        android:id="@+id/navigation_performance"
        android:name="app.android.ad.addev.com.lsg.ui.show.ShowFragment"
        android:label="@string/performance"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_album"
        android:name="app.android.ad.addev.com.lsg.ui.album.AlbumFragment"
        android:label="@string/music"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="app.android.ad.addev.com.lsg.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>