<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        tools:context=".ui.profile.ProfileFragment">
        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="6dp"
            android:textAlignment="gravity"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/textHangul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="gravity"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textName"
            app:layout_constraintStart_toStartOf="@+id/textName"
            app:layout_constraintTop_toBottomOf="@+id/textName"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="gravity"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textHangul"
            app:layout_constraintStart_toStartOf="@+id/textHangul"
            app:layout_constraintTop_toBottomOf="@+id/textHangul"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/textHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="gravity"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textDate"
            app:layout_constraintStart_toStartOf="@+id/textDate"
            app:layout_constraintTop_toBottomOf="@+id/textDate"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/textInstagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="gravity"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textHeight"
            app:layout_constraintStart_toStartOf="@+id/textHeight"
            app:layout_constraintTop_toBottomOf="@+id/textHeight"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/textWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="gravity"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textInstagram"
            app:layout_constraintStart_toStartOf="@+id/textInstagram"
            app:layout_constraintTop_toBottomOf="@+id/textInstagram"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/textViewBiography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="20dp"
            android:text="@string/biography"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textWebsite"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textWebsite"
            app:layout_constraintTop_toBottomOf="@+id/textWebsite" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAlignment="gravity"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewBiography"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewBiography"
            app:layout_constraintTop_toBottomOf="@+id/textViewBiography"
            tools:text="@string/description" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWebsite"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>